# DDojoDeptrackFilter

./: .gitignore  deptrack_findings_report.html  found_deptrack  pyproject.toml
src/ddojodeptrackfilter/: cli.py  client.py  main.py  settings.py
src/ddojodeptrackfilter/ai/: ai_client.py  ai_client.py.try
src/ddojodeptrackfilter/cli/: cli.py
src/ddojodeptrackfilter/ddojo_test_handlers/: __init__.py  base.py  deptrack_test_handler.py
src/ddojodeptrackfilter/defect_dojo_client/: defect_dojo_client.py
src/ddojodeptrackfilter/models/: file.py  finding_group.py  jira_issue.py  note.py  note_author.py  note_history.py  note_type.py  test.py
src/ddojodeptrackfilter/models/api/: file.py  finding.py  finding_engagement.py  finding_environment.py  finding_group.py  finding_meta.py  finding_prod_type.py  finding_product.py  finding_test_type.py  jira_issue.py  note.py  note_history.py  note_type.py  risk_acceptance.py  test.py  vulnerability_id.py
src/ddojodeptrackfilter/models/api/inline_schemas/: note_user.py  related_fields.py  request_responce.py  test_ref.py
src/ddojodeptrackfilter/models/app/: deptrack_description_extract.py
src/ddojodeptrackfilter/report/: deptrack_report.py
src/ddojodeptrackfilter/reports/: deptrack_report.py  html_report_generator.py
src/ddojodeptrackfilter/reports/templates/: deptrack_report.html
