[project]
name = "ddojodeptrackfilter"
version = "0.1"
description = "App that helps triaging Deptrack findings from DefectDojo"
authors = [
    {name = "Stepan Gulyaev",email = "stepan.gulyaev.02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ddojodeptrackfilter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
