[project]
name = "ddojodeptrackfilter"
version = "0.1"
description = "App that helps triaging Deptrack findings from DefectDojo"
authors = [
    {name = "Stepan Gulyaev",email = "stepan.gulyaev.02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "pydantic-ai (>=0.2.3,<0.3.0)"
]

[tool.poetry]
packages = [{include = "ddojodeptrackfilter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
